<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.antoine.walkrun.MainActivity">

    <TextView
        android:id="@+id/tv_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_speed"
        android:textSize="20sp"
        android:layout_marginTop="15dp"/>

    <TextView
        android:id="@+id/tv_av_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_average_speed"
        android:layout_below="@id/tv_speed"
        android:layout_marginTop="15dp"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/tv_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_time"
        android:layout_below="@id/tv_av_speed"
        android:layout_marginTop="15dp"
        android:textSize="20sp"/>

    <Chronometer
        android:id="@+id/chrono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/tv_time"
        android:layout_below="@id/tv_av_speed"
        android:layout_marginTop="15dp"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_dist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_dist"
        android:layout_below="@id/tv_time"
        android:layout_marginTop="15dp"
        android:textSize="20sp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">
        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:id="@+id/btn_start"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_start"
            android:onClick="start_tracking"/>
        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:id="@+id/btn_stop"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_stop"
            android:enabled="false"
            android:onClick="stop_tracking"/>

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:id="@+id/btn_open"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_open"
            android:onClick="clickOpen"/>
    </LinearLayout>


</RelativeLayout>
